ADD: add sreach_phone

--- a/sign/templates/guest_manage.html
+++ b/sign/templates/guest_manage.html
@@ -31,9 +31,9 @@
 <!--嘉宾搜索表单-->
 <div class="page-header" style="padding-top: 20px;">
     <div id="navbar_2" class="navbar-collapse collapse">
-        <form class="navbar-form" method="get" action="/sreach_realname/">
+        <form class="navbar-form" method="get" action="/sreach_phone/">
             <div class="form-group">
-              <input name="realname" type="text" placeholder="名称" class="form-control">
+              <input name="phone" type="text" placeholder="手机号" class="form-control">
             </div>
             <button type="submit" class="btn btn-success">搜索</button>
         </form>
