--- a/sign/templates/event_manage.html
+++ b/sign/templates/event_manage.html
@@ -10,14 +10,14 @@
 <body role="document">
 <!-- 导航栏 -->
 <nav class="navbar navbar-inverse navbar-fixed-top">
-      <div class="container">
+      <div class="container-fulid">
         <div class="navbar-header">
           <a class="navbar-brand" href="/event_manage/">Guest Manage System</a>
         </div>
         <div id="navbar_1" class="collapse navbar-collapse">
           <ul class="nav navbar-nav">
-            <li class="active"><a href="#">发布会</a></li>
-            <li><a href="/guest_manage/">嘉宾</a></li>
+              <li><a href="/guest_manage/">嘉宾</a></li>
+              <li class="active"><a href="#">发布会</a></li>
           </ul>
           <ul class="nav navbar-nav navbar-right">
            <li><a href="#">{{user}}</a></li>
