--- a/sign/templates/guest_manage.html
+++ b/sign/templates/guest_manage.html
@@ -10,7 +10,7 @@
 <body role="document">
 <!-- 导航栏 -->
 <nav class="navbar navbar-inverse navbar-fixed-top">
-      <div class="container">
+      <div class="container-fluid">
         <div class="navbar-header">
           <a class="navbar-brand" href="/event_manage/">Guest Manage System</a>
         </div>
