--- a/sign/templates/sign_index.html
+++ b/sign/templates/sign_index.html
@@ -16,8 +16,8 @@
         </div>
         <div id="navbar" class="collapse navbar-collapse">
           <ul class="nav navbar-nav">
+              <li><a href="/event_manage/">发布会</a></li>
               <li><a href="/guest_manage/">嘉宾</a></li>
-              <li><a href="/guest_manage/">发布会</a></li>
           </ul>
         </div><!--/.nav-collapse -->
       </div>
